refactor: Combine BookIndexService into BookService & fix BookSearchService code